--- a/All.html
+++ b/All.html
@@ -75,7 +75,7 @@
 
                     <li>
                         <a href="https://jandraaz.github.io/am.html">
-                            <img src="images/am.png" alt="am" width="120%"/>
+                            <img src="images/Product/am.png" alt="am" width="120%"/>
                         </a>
                     </li>
 
