--- a/All.html
+++ b/All.html
@@ -63,7 +63,7 @@
 
                     <li>
                         <a href="https://jandraaz.github.io/safi.html">
-                            <img src="images/Product/safi.png" alt="safi" width="120%"/>
+                            <img src="images/Product/Safi.png" alt="safi" width="120%"/>
                         </a>
                     </li>
 
